--- a/index.html
+++ b/index.html
@@ -50,17 +50,13 @@
 
   <body>
 
-  <div class="bodybackgrd pt-5">
+  <div class="bodybackgrd pt-5" id="cntr">
 
     <div class="container-md text-center">
       <div class="row shadow-lg p-3 bg-body customcard">
         <div class="col-md my-auto">
           <div><img src="images/icons/Logo1_purple.png" class="img-fluid" alt="Logo"></div>
           <div><H2>Our Website is under construction.</H2></div>
-
-          <!-- <div class="d-md-none">hide on screens wider than md</div>
-          <div class="d-none d-lg-block">hide on screens smaller than lg</div> -->
-
         </div> <!-- col -->
       </div> <!-- row -->
     </div><!-- container -->
